@@ -1093,7 +1093,7 @@ void Client::ChannelMessageReceived(uint8 chan_num, uint8 language, uint8 lang_s
 		char *Buffer = (char *)es;
 		Buffer += 4;
 		snprintf(Buffer, sizeof(Emote_Struct) - 4, "%s %s", GetName(), message);
-		entity_list.QueueCloseClients(this, outapp, true, 100,0,true,FILTER_SOCIALS);
+		entity_list.QueueCloseClients(this, outapp, true, 100,0,true,FilterSocials);
 		safe_delete(outapp);
 
 		break;
